--- a/modules-available/locations/templates/locations.html
+++ b/modules-available/locations/templates/locations.html
@@ -134,7 +134,7 @@ function slxOpenLocation(e, lid) {
 		if (existing.is(slxLastLocation)) {
 			slxLastLocation = false;
 		} else {
-			existing.show();
+			existing.show()[0].scrollIntoView();
 			$(e).closest('tr').addClass('active slx-bold');
 			slxLastLocation = existing;
 		}
@@ -146,6 +146,7 @@ function slxOpenLocation(e, lid) {
 	$(e).closest('tr').addClass('active slx-bold').after(tr);
 	td.load('?do=Locations&action=showlocation&locationid=' + lid, function() {
 		slxAttachCidr();
+		$('#location-details-' + lid)[0].scrollIntoView();
 	});
 	slxLastLocation = tr;
 }
