--- a/modules-available/locationinfo/templates/pcsubtable.html
+++ b/modules-available/locationinfo/templates/pcsubtable.html
@@ -1,6 +1,6 @@
 <div>
 <br>
-<table style="margin-bottom:0px">
+<table style="margin-bottom:0">
 	<tr>
 		<th width=320>{{lang_pcID}}</th>
 		<th width=120>{{lang_pcIP}}</th>
