Add simple decollapse mechanism for tables:
See upcoming statistics update commit for usage example

--- a/style/default.css
+++ b/style/default.css
@@ -232,6 +232,14 @@ input[readonly] {
 	max-height: 200px;
 }
 
+.slx-decollapse {
+	display: none;
+}
+
+.collapse + .slx-decollapse {
+	display: table-row;
+}
+
 /*
  * Sidebar
  */
