--- a/modules-available/statistics/templates/id44.html
+++ b/modules-available/statistics/templates/id44.html
@@ -12,13 +12,22 @@
 							<th class="text-right">{{lang_machineCount}}</th>
 						</tr>
 						{{#rows}}
-						<tr id="tmpid{{gb}}" class="{{class}}">
+						<tr id="tmpid{{gb}}" class="{{class}} {{collapse}}">
 							<td class="text-left text-nowrap">
 								<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~hddgb={{gb}}">{{gb}}&thinsp;GiB</a>
 							</td>
 							<td class="text-right">{{count}}</td>
 						</tr>
 						{{/rows}}
+						<tr class="slx-decollapse">
+							<td colspan="2">
+								<span class="btn-group btn-group-justified">
+									<span class="btn btn-default btn-sm">
+										<span class="glyphicon glyphicon-menu-down"></span>
+									</span>
+								</span>
+							</td>
+						</tr>
 					</table>
 				</div>
 				<div class="col-sm-6">
