[sysconfig] Add table-hover class to config and module list

--- a/modules-available/sysconfig/templates/list-configs.html
+++ b/modules-available/sysconfig/templates/list-configs.html
@@ -18,7 +18,7 @@
 				<input type="hidden" name="token" value="{{token}}">
 				<input type="hidden" name="action" value="config">
 				<input type="hidden" name="locationid" value="{{locationid}}">
-				<table id="conftable" class="slx-table" style="width:100%">
+				<table id="conftable" class="slx-table table-hover" style="width:100%">
 					{{#configs}}
 					<tr>
 						<td data-modlist="{{modlist}}" class="slx-pointer" onclick="showmod(this, 'bold')" onmouseover="showmod(this, 'fade')" onmouseout="showmod(this, 'reset')" width="100%">
