--- a/modules-available/sysconfig/templates/list-modules.html
+++ b/modules-available/sysconfig/templates/list-modules.html
@@ -8,7 +8,7 @@
 			<form method="post" action="?do=SysConfig">
 				<input type="hidden" name="token" value="{{token}}">
 				<input type="hidden" name="action" value="module">
-				<table id="modtable" class="slx-table" style="width:100%">
+				<table id="modtable" class="slx-table table-hover" style="width:100%">
 					{{#modules}}
 					<tr>
 						<td class="badge text-nowrap">{{moduleType}}</td>
