--- a/modules-available/locationinfo/templates/pcsubtable.html
+++ b/modules-available/locationinfo/templates/pcsubtable.html
@@ -6,7 +6,7 @@
 		<th width=120>{{lang_pcIP}}</th>
 		<th width=50>{{lang_pcX}}</th>
     <th width=50>{{lang_pcY}}</th>
-		<th width=20>{{lang_pcInUse}}</th>
+		<th width=20>{{lang_pcState}}</th>
 	</tr>
 
 {{#list}}
@@ -15,7 +15,7 @@
     <td>{{ip}}</td>
 		<td>{{x}}</td>
 		<td>{{y}}</td>
-		<td align="center">{{inUse}}</td>
+		<td align="center">{{pcState}}</td>
 	</tr>
 {{/list}}
 
